# CodeFromAI

./: .gitignore  AGENTS.md  BACKUP_POLICY.md  README.md
hc_hierarchy/: .gitignore  README.md  design.deep.db.slang.65054a817ef9.f  grokid.txt  pyproject.toml  test.db.slang.1c2eb43b8dc6.f  test.db.slang.dac18695efad.f  this_prompt.md
hc_hierarchy/design/: README.md
hc_hierarchy/docs/: ARCHITECTURE.md  DQL_RULES.md  ENGINE_INSTALL.md  INDEXING.md  PARSE_ENHANCEMENT_PLAN.md  PARSE_PHASE18_21_DESIGN.md  PARSING_GAP_PLAN.md  PLAN.md  PROGRESS.md  REFERENCES.md  REMAINING.md  SV_ENHANCEMENT_PLAN.md  TIER_CONTRACT.md
hc_hierarchy/fixtures/: README.md  dql_batch_hdlforast.txt  dql_batch_synthetic_full.txt  dql_batch_synthetic_quick.txt  dql_batch_unified_verify.txt
hc_hierarchy/scripts/: analyze_shallow_elab.py  archive_windows_long_paths.py  bench_elab_synthetic.py  bench_elab_synthetic.sh  clean.py  clean.sh  diagnose_tier_e_failures.py  fix_synthetic_ports.py  index_synthetic_full.sh  install_engine.sh  install_engine_deps.sh  make_portable_filelist.py  restore_synthetic_deep_rtl.py  restore_synthetic_partial.py  self_check_tier_e.py  verify_anchor_depth.sh  verify_batch_dql.sh  verify_batch_dql_full.sh  verify_perf_and_elab.sh  verify_phase26.sh  verify_phase27.sh  verify_phase6.sh  verify_v1.sh
hc_hierarchy/tests/: conftest.py  test_hierarchy_fields.py
pyslangVerilogHieExp/: README.md  _gui  dev_server.py  install_qt_deps.sh  large-design.sh  pyproject.toml  start-explorer.sh
pyslangVerilogHieExp/.temp/: rtl_dql_20260601_115436.md
pyslangVerilogHieExp/demo/: dql_explorer_server.py  hierarchy_explorer.html  run_dql_explorer.sh
pyslangVerilogHieExp/demo_data/: hierarchy.db  large_soc_1000.json  modules.json  tiny_soc.json
pyslangVerilogHieExp/docs/: DESIGN_QUERY_LANGUAGE.md  SQLITE_SCHEMA_DESIGN.md  data_structure_design.md  hierarchy_fast_search_structures.py  hierarchy_query_engine_sketch.py  lightweight_indexer_sketch.py  required_data_model_for_advanced_search.md
pyslangVerilogHieExp/examples/: README.md  test_queries.json  verify_dql.py  verify_dql.sh
pyslangVerilogHieExp/gui/: rtl_dql_gui.py
pyslangVerilogHieExp/tests/: test_hierarchy_elaboration.py  test_rvast_smoke.py
pyslangVerilogHieExp/tools/: _rvast_shim.py  dql_eval.js  dql_parser.js  dql_query.py  eda_filelist_parser.py  eda_integration.py  expression_evaluator.py  generate_deep_hierarchy_rtl.py  generate_full_test_filelist.py  generate_large_demo_data.py  generate_unroller.py  parameter_propagator.py  verify_parameter_propagation_batch.py  verilog_preprocessor.py
scan_inst/: .gitignore  README.md  pyproject.toml
scan_inst/.run/: scan-inst_waypoint_fanout.run.xml
scan_inst/examples/: flat_run_example.json  search_example.json
scan_inst/scripts/: bench_index_build.py  debug_waypoint_fanout.py  vuln_audit_probe.py
scan_inst/tests/: test_batch_run_parity.py  test_cache.py  test_cone.py  test_config_env_audit.py  test_connect_concat_order.py  test_connect_expand.py  test_connect_expand_literals.py  test_connect_tsv_flatten.py  test_connectivity.py  test_coverage_audit.py  test_elab_search.py  test_enable_execution.py  test_filelist_hch.py  test_filelist_provenance.py  test_hierarchy_log.py  test_ifndef_macro_instance.py  test_ignore_filelist.py  test_ignore_path.py  test_include_discovery.py  test_index_perf.py  test_inst_forms.py  test_inst_scan_large_attr.py  test_inst_subtree_search.py  test_inst_trace.py  test_large_module_params.py  test_lazy_policy.py  test_lazy_processing.py  test_manifest.py  test_nested_ifndef_instance.py  test_param_override_inst.py  test_parse_matrix_scan_inst.py  test_path_chain.py  test_path_port_search.py  test_path_refine_inst_parse.py  test_path_walk.py  test_path_walk_abcd.py  test_path_walk_db.py  test_path_walk_filelist_scope.py  test_path_walk_inst_c.py  test_path_walk_miss_cause.py  (+28 more)
soc-verify-agent/: .gitignore  README.md  config.example.json  config.json  config.schema.json  pyproject.toml
soc-verify-agent/docs/: ARCHITECTURE.md  PAPER_FACTORY.md  RESEARCH.md  SELF_HARNESS_PLAN.md  (+1 more)
socverif-harness/: .gitignore  GOAL_DELIVERABLE.json  README.md  goal-in-scope-files.txt  pyproject.toml  run_all_envs.sh
verifclaw/: .env  prjhie.txt  pyproject.toml  requirements.txt  systemd  verifclaw_memory.json
(+3764 files in other folders)
