[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rvast"
version = "0.2.0"
description = "Regex-based Verilog AST, elaboration, and DQL — Python-only RTL hierarchy tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lark>=1.1.5",
]

[project.optional-dependencies]
gui = ["PySide6>=6.5"]
dev = ["pytest>=7.0"]

[project.scripts]
rvast-dql = "rvast.apps.dql_cli:main"
rvast-elab = "rvast.apps.elab_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]