[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "scan-inst"
version = "0.1.10"
description = "Preprocessed regex Verilog instance scanner"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
scan-inst = "scan_inst.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "stress: deep hierarchy connectivity stress trials (slower)",
]