[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "soc-verify-agent"
version = "0.1.0"
description = "Multi-project SoC verification agent: LangGraph orchestration, per-project Python ops, trust-adaptive execution"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "langgraph>=0.2",
    "langchain-core>=0.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
soc-verify = "soc_verify.cli:main"
paper-factory = "soc_verify.paper_factory_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: EXAMPLE-SOC verify_group end-to-end (resets trust fixture before run)",
    "integration: slower integration tests",
]